--- a/reg/step3.html
+++ b/reg/step3.html
@@ -53,18 +53,12 @@
                 <div class="job-categories1">
                     <div class="job-categories1-title">職業類別1</div>
                     <div class="job-categories1-checkbox">
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id="1st-skill-0"><span>建築</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id="2nd-skill-0"><span>室内設計</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id="3rd-skill-0"><span>相關技師｜顧問</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id="4th-skill-0"><span>景觀｜規劃｜土地開發</span></label><br>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id="5th-skill-0"><span>工程｜材料｜設備｜廠商｜運輸</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id="6th-skill-0"><span>建築文化資產｜教育｜出版媒體</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]" id="1st-skill-0"><span>建築</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]" id="2nd-skill-0"><span>室内設計</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]" id="3rd-skill-0"><span>相關技師｜顧問</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]" id="4th-skill-0"><span>景觀｜規劃｜土地開發</span></label><br>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]" id="5th-skill-0"><span>工程｜材料｜設備｜廠商｜運輸</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]" id="6th-skill-0"><span>建築文化資產｜教育｜出版媒體</span></label>
                     </div>
                     <div class="work-skill sp-tgl-wrap">
                         <h3 class="works__section-title tgl-switch">
@@ -82,8 +76,7 @@
                                     <div class="work-skill__evaluation">
                                         <ol class="c-evaluation">
                                             <li class="c-evaluation__item">
-                                                <input type="radio" name="autocad_skill[0]" id="evaluation-c-0"
-                                                    required>
+                                                <input type="radio" name="autocad_skill[0]" id="evaluation-c-0" required>
                                                 <label for="evaluation-c-0" class="c-evaluation__rank">C</label>
                                             </li>
                                             <li class="c-evaluation__item">
@@ -116,8 +109,7 @@
                                     <div class="work-skill__evaluation">
                                         <ol class="c-evaluation">
                                             <li class="c-evaluation__item">
-                                                <input type="radio" name="drawing_skill[0]" id="evaluation-c2-0"
-                                                    required>
+                                                <input type="radio" name="drawing_skill[0]" id="evaluation-c2-0" required>
                                                 <label for="evaluation-c2-0" class="c-evaluation__rank">C</label>
                                             </li>
                                             <li class="c-evaluation__item">
@@ -149,8 +141,7 @@
                                     <div class="work-skill__evaluation">
                                         <ol class="c-evaluation">
                                             <li class="c-evaluation__item">
-                                                <input type="radio" name="manege_skill[0]" id="evaluation-c3-0"
-                                                    required>
+                                                <input type="radio" name="manege_skill[0]" id="evaluation-c3-0" required>
                                                 <label for="evaluation-c3-0" class="c-evaluation__rank">C</label>
                                             </li>
                                             <li class="c-evaluation__item">
@@ -246,8 +237,7 @@
                 </div>
                 <div class="info-submit">
                     <button type="submit" name=""><a href="./step4.html">送出</a></button>
-                    <button type="button" class="backtoprevious"><a href="./step2.html"
-                            class="backtoprevious">上一頁</a></button>
+                    <button type="button" class="backtoprevious"><a href="./step2.html" class="backtoprevious">上一頁</a></button>
                 </div>
             </form>
         </div>
