--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -57,17 +57,14 @@
                         <div class="personal-info-contents__image">
                             <div class="image-area">
                                 <img src="" class="preview" id="preview" alt="preview">
-                                <input type="file" name="profile_img" required accept="image/*"
-                                    onchange="previewImage(this)">
+                                <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                             </div>
 
                             <p>(請上傳本人2吋證件照或正式照片)</p>
                         </div>
                         <div class="personal-info-contents__bottom">
-                            <p><label for="address">地址：</label><br><textarea name="address"
-                                    placeholder="台北市大安區敦化南路一段100號" id="address"></textarea></p>
-                            <p><label for="phone1">聯絡電話：</label><br><input type="tel" name="phone1"
-                                    placeholder="0910-000-000" id="phone1"></p>
+                            <p><label for="address">地址：</label><br><textarea name="address" placeholder="台北市大安區敦化南路一段100號" id="address"></textarea></p>
+                            <p><label for="phone1">聯絡電話：</label><br><input type="tel" name="phone1" placeholder="0910-000-000" id="phone1"></p>
                         </div>
                     </div>
                 </div>
@@ -82,18 +79,13 @@
                 <div class="experience">
                     <div class="experience-top">工作經歷 Experience</div>
                     <ul class="experience-contents">
-                        <li><label for="start-month[0]">開始年月</label><br><input type="date" name="start_month[0]"
-                                id="start-month[0]" placeholder="2022/1" required></li>
+                        <li><label for="start-month[0]">開始年月</label><br><input type="date" name="start_month[0]" id="start-month[0]" placeholder="2022/1" required></li>
                         <li>~<p></p>
                         </li>
-                        <li><label for="end-month[0]">結束年月</label><br><input type="date" name="end_month[0]"
-                                id="end-month[0]" placeholder="現在" required></li>
-                        <li><label for="total-month[0]">共計年月</label><br><input type="text" name="total_month[0]"
-                                id="total-month[0]" placeholder="0年3個月" required></li>
-                        <li><label for="job-title[0]">職稱</label><br><input type="text" name="job_title[0]"
-                                id="job-title[0]" placeholder="請填寫職稱 EX:建築設計師" required></li>
-                        <li><label for="employment[0]">就職公司</label><br><input type="text" name="employment[0]"
-                                id="employment[0]" placeholder="請填寫公司名稱 EX:某建築師事務所" required></li>
+                        <li><label for="end-month[0]">結束年月</label><br><input type="date" name="end_month[0]" id="end-month[0]" placeholder="現在" required></li>
+                        <li><label for="total-month[0]">共計年月</label><br><input type="text" name="total_month[0]" id="total-month[0]" placeholder="0年3個月" required></li>
+                        <li><label for="job-title[0]">職稱</label><br><input type="text" name="job_title[0]" id="job-title[0]" placeholder="請填寫職稱 EX:建築設計師" required></li>
+                        <li><label for="employment[0]">就職公司</label><br><input type="text" name="employment[0]" id="employment[0]" placeholder="請填寫公司名稱 EX:某建築師事務所" required></li>
                     </ul>
 
                     <div class="experience-note"><textarea placeholder="簡述, 工作重點, 負責專案, 備註"></textarea></div>
@@ -101,12 +93,10 @@
                 <div class="education">
                     <div class="education-top">學歷 Education</div>
                     <ul class="education-contents">
-                        <li><label for="begin-month[0]">開始年月</label><br><input type="date" name="begin_month[0]"
-                                id="begin-month[0]" placeholder="2020/9" required></li>
+                        <li><label for="begin-month[0]">開始年月</label><br><input type="date" name="begin_month[0]" id="begin-month[0]" placeholder="2020/9" required></li>
                         <li>~<p></p>
                         </li>
-                        <li><label for="last-month[0]">結束年月</label><br><input type="date" name="last_month[0]"
-                                id="last-month[0]" required></li>
+                        <li><label for="last-month[0]">結束年月</label><br><input type="date" name="last_month[0]" id="last-month[0]" required></li>
                         <li>
                             <input type="radio" name="graduate[0]" id="graduate[0]" required>
                             <label for="graduate[0]" class="education-radio-button">畢業</label>
@@ -115,12 +105,9 @@
                             <input type="radio" name="graduate[0]" id="n-graduate[0]" required>
                             <label for="n-graduate[0]" class="education-radio-button">肄業</label>
                         </li>
-                        <li><label for="school[0]">學校</label><br><input type="text" name="school[0]" id="school[0]"
-                                placeholder="台湾大学" required></li>
-                        <li><label for="subject[0]">科系</label><br><input type="text" name="subject[0]" id="subject[0]"
-                                placeholder="土木工程系" required></li>
-                        <li><label for="degree[0]">學位</label><br><input type="text" name="degree[0]" id="degree[0]"
-                                placeholder="博⼠候選⼈" required></li>
+                        <li><label for="school[0]">學校</label><br><input type="text" name="school[0]" id="school[0]" placeholder="台湾大学" required></li>
+                        <li><label for="subject[0]">科系</label><br><input type="text" name="subject[0]" id="subject[0]" placeholder="土木工程系" required></li>
+                        <li><label for="degree[0]">學位</label><br><input type="text" name="degree[0]" id="degree[0]" placeholder="博⼠候選⼈" required></li>
                     </ul>
                 </div>
                 <div class="license">
