--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -36,16 +36,12 @@
                     <div class="job-categories1-title">職業類別1</div>
                     <div class="job-categories1-checkbox">
                         <!-- TODO: idが重複している。利用しない場合は記述しないように @shin -->
-                        <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>建築</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>室内設計</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id=""><span>相關技師｜顧問</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id=""><span>景觀｜規劃｜土地開發</span></label><br>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id=""><span>工程｜材料｜設備｜廠商｜運輸</span></label>
-                        <label><input class="job-checkbox" type="radio" name="skill[0]"
-                                id=""><span>建築文化資產｜教育｜出版媒體</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]"><span>建築</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]"><span>室内設計</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]"><span>相關技師｜顧問</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]"><span>景觀｜規劃｜土地開發</span></label><br>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]"><span>工程｜材料｜設備｜廠商｜運輸</span></label>
+                        <label><input class="job-checkbox" type="radio" name="skill[0]"><span>建築文化資產｜教育｜出版媒體</span></label>
                     </div>
                     <div class="work-skill sp-tgl-wrap">
                         <h3 class="works__section-title tgl-switch">
@@ -225,8 +221,7 @@
                 </div>
                 <div class="info-submit">
                     <button type="submit" name=""><a href="../step4.html">送出</a></button>
-                    <button type="button" class="backtoprevious"><a href="../step2.html"
-                            class="backtoprevious">上一頁</a></button>
+                    <button type="button" class="backtoprevious"><a href="../step2.html" class="backtoprevious">上一頁</a></button>
                 </div>
             </form>
         </div>
