--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -220,8 +220,7 @@
                     </table>
                 </div>
                 <div class="info-submit">
-                    <button type="submit" name=""><a href="../step4.html">送出</a></button>
-                    <button type="button" class="backtoprevious"><a href="../step2.html" class="backtoprevious">上一頁</a></button>
+                    <button type="submit" name=""><a href="">采用</a></button>
                 </div>
             </form>
         </div>
