update: htmlファイルの階層変更

--- a/list.html
+++ b/list.html
@@ -47,11 +47,19 @@
                 </ul>
             </div>
             <div class="list-body__contents">
-                My Page
+                My Page Preview
                 <ul>
-                    <li><a href="mypage/editinfo.html">Edit Info page</a></li>
-                    <li><a href="mypage/editresume.html">Edit Resume page</a></li>
-                    <li><a href="mypage/editskill.html">Edit Skill page</a></li>
+                    <li><a href="mypage/preview/info.html">Preview Info page</a></li>
+                    <li><a href="mypage/preview/resume.html">Preview Resume page</a></li>
+                    <li><a href="mypage/preview/skill.html">Preview Skill page</a></li>
+                </ul>
+            </div>
+            <div class="list-body__contents">
+                My Page Edit
+                <ul>
+                    <li><a href="mypage/edit/info.html">Edit Info page</a></li>
+                    <li><a href="mypage/edit/resume.html">Edit Resume page</a></li>
+                    <li><a href="mypage/edit/skill.html">Edit Skill page</a></li>
 
                 </ul>
             </div>
