--- a/mypage/edit/skill.html
+++ b/mypage/edit/skill.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A++ my skills</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../../favicon.ico">
 </head>
 
 <body class="lower-index" id="pagetop">
@@ -17,8 +17,8 @@
         <div class="header__middle">
             <div class="header__inner">
                 <h1 class="h-logo">
-                    <a href="../index.html">
-                        <img src="../img/logo.svg" alt="A++" />
+                    <a href="../../index.html">
+                        <img src="../../img/logo.svg" alt="A++" />
                     </a>
                 </h1>
                 <div class="c-spacer"></div>
@@ -46,7 +46,7 @@
                     <div class="work-skill sp-tgl-wrap">
                         <h3 class="works__section-title tgl-switch">
                             <div class="works__section-icon">
-                                <img src="../img/home/work_section_title_icon1.svg" alt="work_section_title_icon1" />
+                                <img src="../../img/home/work_section_title_icon1.svg" alt="work_section_title_icon1" />
                             </div>
                             主要技能需求
                         </h3>
@@ -162,7 +162,7 @@
                                 <div class="c-tags__item">
                                     <a href="#" class="c-tags__link -red">
                                         <span class="c-tags__icon">
-                                            <img src="../img/home/skill_tags_icon.svg" alt="skill_tags_icon" />
+                                            <img src="../../img/home/skill_tags_icon.svg" alt="skill_tags_icon" />
                                         </span>
                                         <span class="-underline">如何得到Ａ＋＋</span>
                                     </a>
@@ -174,7 +174,7 @@
 
                 <div class="rank-base" id="rank-base">
                     <div class="rank-base-title">
-                        <img src="../img/sales_analysis_icon.png" alt="">評分標準
+                        <img src="../../img/sales_analysis_icon.png" alt="">評分標準
                     </div>
                     <table class="rankBase">
                         <tr>
@@ -229,7 +229,7 @@
     <!-- Pagetop -->
     <div class="c-pagetop">
         <a href="#pagetop" id="js-pagetop">
-            <img src="../img/arrow_down_red.svg" alt="Pagetop" />
+            <img src="../../img/arrow_down_red.svg" alt="Pagetop" />
         </a>
     </div>
     <!-- // Pagetop -->
@@ -259,7 +259,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 
 </html>
