--- a/mypage/edit/info.html
+++ b/mypage/edit/info.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A++ my info</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../../favicon.ico">
 </head>
 
 <body id="pagetop">
@@ -18,8 +18,8 @@
         <div class="header__middle">
             <div class="header__inner">
                 <h1 class="h-logo">
-                    <a href="../index.html">
-                        <img src="../img/logo.svg" alt="A++" />
+                    <a href="../../index.html">
+                        <img src="../../img/logo.svg" alt="A++" />
                     </a>
                 </h1>
                 <div class="c-spacer"></div>
@@ -32,7 +32,7 @@
         <!-- yellow-box -->
         <div class="attention">
             <div class="yellow-box">
-                <img src="../img/attention_yellow.png" alt="attention">
+                <img src="../../img/attention_yellow.png" alt="attention">
                 免費註冊成為會員僅需在網站上填寫相關資料, Ａ＋＋不會主動以電話面試或聯繫。
             </div>
         </div>
@@ -89,7 +89,7 @@
     <!-- Pagetop -->
     <div class="c-pagetop">
         <a href="#pagetop" id="js-pagetop">
-            <img src="../img/arrow_down_red.svg" alt="Pagetop" />
+            <img src="../../img/arrow_down_red.svg" alt="Pagetop" />
         </a>
     </div>
     <!-- // Pagetop -->
@@ -119,7 +119,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 
 </html>
