--- a/mypage/edit/resume.html
+++ b/mypage/edit/resume.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A++ my resume</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../../favicon.ico">
 </head>
 
 <body id="pagetop">
@@ -18,8 +18,8 @@
         <div class="header__middle">
             <div class="header__inner">
                 <h1 class="h-logo">
-                    <a href="../index.html">
-                        <img src="../img/logo.svg" alt="A++" />
+                    <a href="../../index.html">
+                        <img src="../../img/logo.svg" alt="A++" />
                     </a>
                 </h1>
                 <div class="c-spacer"></div>
@@ -114,7 +114,7 @@
                     <div class="license-top">
                         專業證照｜獲獎紀錄｜相關社團參與
                         <button type="button" onclick="addForm()">
-                            <img src="../img/add_form_dark.png" alt="pen">+
+                            <img src="../../img/add_form_dark.png" alt="pen">+
                         </button>
                     </div>
                     <div class="license-contents" id="form_area">
@@ -138,7 +138,7 @@
     <!-- Pagetop -->
     <div class="c-pagetop">
         <a href="#pagetop" id="js-pagetop">
-            <img src="../img/arrow_down_red.svg" alt="Pagetop" />
+            <img src="../../img/arrow_down_red.svg" alt="Pagetop" />
         </a>
     </div>
     <!-- // Pagetop -->
@@ -168,7 +168,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="../js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 
 </html>
