update: 現時点で判別できるリンクすべて追加

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-<!-- TODO: わかる範囲でリンクをはる @shin -->
 
 <head>
     <meta charset="UTF-8" />
@@ -57,7 +56,7 @@
         <div class="header__middle">
             <div class="header__inner">
                 <h1 class="h-logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="./img/logo.svg" alt="A++" />
                     </a>
                 </h1>
@@ -65,7 +64,7 @@
                 <div class="h-middle-buttons">
                     <!-- Register -->
                     <div class="c-button -orange">
-                        <a href="" class="c-button__link">
+                        <a href="reg/step1.html" class="c-button__link">
                             <span class="c-button__icon">
                                 <img src="./img/register_icon.svg" alt="" />
                             </span>
@@ -74,7 +73,7 @@
                     </div>
                     <!-- Login -->
                     <div class="c-button -white">
-                        <a href="" class="c-button__link">
+                        <a href="user/login.html" class="c-button__link">
                             <span class="c-button__icon">
                                 <img src="./img/login_icon.svg" alt="" />
                             </span>
@@ -83,7 +82,7 @@
                     </div>
                     <!-- // Login -->
                     <div class="c-button -orange">
-                        <a href="" class="c-button__link">
+                        <a href="mypage/preview/info.html" class="c-button__link">
                             <span class="c-button__icon">
                                 <img src="./img/my_page_icon.png" alt="">
                             </span>
@@ -122,13 +121,13 @@
         <nav class="header-sp__navigation">
             <ul class="header-sp__list">
                 <li class="header-sp__item">
-                    <a href="">
+                    <a href="reg/step1.html">
                         <img src="./img/register_icon.svg" alt="" />
                         <span>註冊</span>
                     </a>
                 </li>
                 <li class="header-sp__item">
-                    <a href="">
+                    <a href="user/login.html">
                         <img src="./img/login_icon_white.png" alt="" />
                         <span>登入</span>
                     </a>
