--- a/mypage/edit/info.html
+++ b/mypage/edit/info.html
@@ -78,7 +78,7 @@
                 <div class="submit-button">
                     <!-- TODO: 変更の中国語記述に修正 @shin -->
                     <!-- TODO: 修改はプレビューページのボタンとしておく @shin -->
-                    <button type="submit">修改</button>
+                    <button type="submit"><a href="../preview/info.html">采用</a></button>
                 </div>
             </form>
         </div>
