--- a/mypage/edit/resume.html
+++ b/mypage/edit/resume.html
@@ -128,8 +128,7 @@
                     </div>
                 </div>
                 <div class="info-submit">
-                    <!-- TODO: した２つ共にリンク切れ @shin -->
-                    <button type="submit" name=""><a href="">采用</a></button>
+                    <button type="submit" name=""><a href="../preview/resume.html">采用</a></button>
                 </div>
             </form>
         </div>
