--- a/mypage/edit/skill.html
+++ b/mypage/edit/skill.html
@@ -35,7 +35,6 @@
                 <div class="job-categories1">
                     <div class="job-categories1-title">職業類別1</div>
                     <div class="job-categories1-checkbox">
-                        <!-- TODO: idが重複している。利用しない場合は記述しないように @shin -->
                         <label><input class="job-checkbox" type="radio" name="skill[0]"><span>建築</span></label>
                         <label><input class="job-checkbox" type="radio" name="skill[0]"><span>室内設計</span></label>
                         <label><input class="job-checkbox" type="radio" name="skill[0]"><span>相關技師｜顧問</span></label>
@@ -220,7 +219,7 @@
                     </table>
                 </div>
                 <div class="info-submit">
-                    <button type="submit" name=""><a href="">采用</a></button>
+                    <button type="submit" name=""><a href="../preview/skill.html">采用</a></button>
                 </div>
             </form>
         </div>
