update: ライブラリをインストール

--- a/reg/step2.html
+++ b/reg/step2.html
@@ -56,7 +56,7 @@
                         <div class="personal-info-contents__image">
                             <div class="image-area">
                                 <img src="../img/cameraa_add_image_gray.svg" alt="camera-icon" class="camera-icon">
-                                <img src="" class="preview" id="preview" alt="">
+                                <img class="preview" id="preview" alt="">
                                 <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                             </div>
 
