--- a/mypage/edit/resume.html
+++ b/mypage/edit/resume.html
@@ -12,7 +12,6 @@
 </head>
 
 <body id="pagetop">
-    <!-- TODO: タグがない @shin -->
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
@@ -56,7 +55,7 @@
                     <div class="personal-info-contents">
                         <div class="personal-info-contents__image">
                             <div class="image-area">
-                                <img src="" class="preview" id="preview" alt="preview">
+                                <img class="preview" id="preview" alt="preview">
                                 <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                             </div>
 
