--- a/reg/step1.html
+++ b/reg/step1.html
@@ -42,22 +42,16 @@
             <div class="white-box">
                 <div class="white-box-contents">
                     <p><span>STEP1</span>註冊成為會員</p>
-                    您將收到一封驗證電子郵件,請由此設定新密碼。
-                    <p>
-                        <div class="triangle-bottom"></div>
-                    </p>
+                    <div>您將收到一封驗證電子郵件,請由此設定新密碼</div>               
+                    <div class="triangle-arrow"><div class="triangle-arrow__down"></div> </div>
                     <p><span>STEP2</span>填寫個人履歷</p>
-                    登入後, 請填寫個人履歷。
-                    <p>
-                        <div class="triangle-bottom"></div>
-                    </p>
+                    <div>登入後, 請填寫個人履歷。</div>                   
+                    <div class="triangle-arrow"><div class="triangle-arrow__down"></div></div>
                     <p><span>STEP3</span>填寫自我評量</p>
-                    獨家6級評量表, 更明確了解個人專業能力。
-                    <p>
-                        <div class="triangle-bottom"></div>
-                    </p>
-                    <p><span>STEP4</span>完成&nbsp;&nbsp;&nbsp;&nbsp;</p>
-                    完成後, 便可開始媒合工作。
+                    <div>獨家6級評量表, 更明確了解個人專業能力。</div>                     
+                    <div class="triangle-arrow"><div class="triangle-arrow__down"></div></div>                   
+                    <p><span>STEP4</span>完成</p>
+                    <div>完成後, 便可開始媒合工作。</div> 
                 </div>
             </div>
         </div>
@@ -104,8 +98,7 @@
                     <label>
                         <input class="agree-checkbox" type="checkbox" name="check_name">
                         <span>
-                            本人已閱讀並同意Ａ＋＋的
-                            <a href="">網站使用規約及服務條款</a>與<a href="">隱私權政策</a>
+                            本人已閱讀並同意Ａ＋＋的<br><a href="">網站使用規約及服務條款</a>與<a href="">隱私權政策</a>
                         </span>
                     </label>
                 </div>
