:update: step2.3の戻るボタン修正

--- a/reg/step2.html
+++ b/reg/step2.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../favicon.ico">
 </head>
 
-<body id="pagetop">
+<body class="lower-index" id="pagetop">
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
@@ -128,8 +128,8 @@
                     </div>
                 </div>
                 <div class="info-submit">
-                    <button type="submit"><a href="./step3.html">送出</a></button>
-                    <button type="button" class="backtoprevious"><a href="./step1.html">上一頁</a></button>
+                    <button type="submit" name="" class="button-bottom"><a href="./step4.html">送出</a></button>
+                    <a href="./step2.html" class="button-bottom">上一頁</a>               
                 </div>
             </form>
         </div>
