--- a/reg/step3.html
+++ b/reg/step3.html
@@ -236,8 +236,8 @@
                     </table>
                 </div>
                 <div class="info-submit">
-                    <button type="submit" name=""><a href="./step4.html">送出</a></button>
-                    <button type="button" class="backtoprevious"><a href="./step2.html" class="backtoprevious">上一頁</a></button>
+                    <button type="submit" name="" class="button-bottom"><a href="./step4.html">送出</a></button>
+                    <a href="./step2.html" class="button-bottom">上一頁</a>               
                 </div>
             </form>
         </div>
