:wrench: アコーディオン動作

--- a/reg/step1.html
+++ b/reg/step1.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../favicon.ico">
 </head>
 
-<body id="pagetop">
+<body class="lower-index" id="pagetop">
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
@@ -42,16 +42,22 @@
             <div class="white-box">
                 <div class="white-box-contents">
                     <p><span>STEP1</span>註冊成為會員</p>
-                    <div>您將收到一封驗證電子郵件,請由此設定新密碼</div>               
-                    <div class="triangle-arrow"><div class="triangle-arrow__down"></div> </div>
+                    <div>您將收到一封驗證電子郵件,請由此設定新密碼</div>
+                    <div class="triangle-arrow">
+                        <div class="triangle-arrow__down"></div>
+                    </div>
                     <p><span>STEP2</span>填寫個人履歷</p>
-                    <div>登入後, 請填寫個人履歷。</div>                   
-                    <div class="triangle-arrow"><div class="triangle-arrow__down"></div></div>
+                    <div>登入後, 請填寫個人履歷。</div>
+                    <div class="triangle-arrow">
+                        <div class="triangle-arrow__down"></div>
+                    </div>
                     <p><span>STEP3</span>填寫自我評量</p>
-                    <div>獨家6級評量表, 更明確了解個人專業能力。</div>                     
-                    <div class="triangle-arrow"><div class="triangle-arrow__down"></div></div>                   
+                    <div>獨家6級評量表, 更明確了解個人專業能力。</div>
+                    <div class="triangle-arrow">
+                        <div class="triangle-arrow__down"></div>
+                    </div>
                     <p><span>STEP4</span>完成</p>
-                    <div>完成後, 便可開始媒合工作。</div> 
+                    <div>完成後, 便可開始媒合工作。</div>
                 </div>
             </div>
         </div>
@@ -115,16 +121,27 @@
         <!-- accordion-menu -->
         <div class="accordion-menu">
             <div class="accordion-menu__area">
-                <details>
-                    <summary class="register-base-top">註冊標準<img src="../img/arrow_down_red.svg" alt="arrow_down">
-                    </summary>
-                    <div class="resister-base-contents">test</div>
-                </details>
-                <details>
-                    <summary>外國公民<img src="../img/arrow_down_red.svg" alt="arrow_down"></summary>
-                </details>
+                <div class="accordion-item tgl-wrap">
+                    <dt class="register-base-top tgl-switch">
+                        註冊標準
+                    </dt>
+                    <dd class="resister-base-contents tgl-content">
+                        test
+                    </dd>
+                </div>
+                <div class="accordion-item tgl-wrap">
+                    <dt class="register-base-bottom tgl-switch">
+                        外國公民
+                    </dt>
+                    <dd class="resister-base-contents tgl-content">
+                        test
+                    </dd>
+                </div>
             </div>
+
         </div>
+
+        <div></div>
         <!-- // accordion-menu -->
     </div>
 
