:wrench: step1 スマホ版のレイアウト修正

--- a/reg/step1.html
+++ b/reg/step1.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../favicon.ico">
 </head>
 
-<body class="lower-index" id="pagetop">
+<body id="pagetop">
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
@@ -68,8 +68,8 @@
             <form class="form-account-info" action="" method="post" enctype="multipart/form-data">
                 <table class="account-info-input">
                     <tr>
-                        <td class="icon-required"><label for="user-id">ID帳號</label></td>
-                        <td><input type="text" name="user_id" id="user-id" required></td>
+                        <td class="label icon-required"><label for="user-id">ID帳號</label></td>
+                        <td class="label-input"><input type="text" name="user_id" id="user-id" required></td>
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="password">密碼</label></td>
@@ -89,7 +89,7 @@
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="birthday">出生日期</label></td>
-                        <td><input type="date" name="birthday" id="birthday" required></td>
+                        <td><input type="date" name="birthday" id="birthday" value="1997-07-07" required></td>
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="email">電子郵件信箱</label></td>
