:wrench: indexのclass名スペルミス修正

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                         </div>
                     </div>
                     <div class="c-search-box-modal__close">
-                        <button class="serch-box__close-button">
+                        <button class="search-box__close-button">
                             <img src="./img/close_icon.svg" alt="" />
                         </button>
                     </div>
