--- a/reg/step1.html
+++ b/reg/step1.html
@@ -89,7 +89,7 @@
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="birthday">出生日期</label></td>
-                        <td><input type="date" name="birthday" id="birthday" value="1997-07-07" required></td>
+                        <td><input type="date" name="birthday" id="birthday" required></td>
                     </tr>
                     <tr>
                         <td class="icon-required"><label for="email">電子郵件信箱</label></td>
