--- a/reg/step2.html
+++ b/reg/step2.html
@@ -79,46 +79,63 @@
                 <div class="experience">
                     <div class="experience-top">
                         工作經歷 Experience
-                        <button type="button" onclick="">
+                        <button type="button" onclick="addExperienceForm()">
                             <img src="../img/add_form_dark.svg" alt="addForm_icon">
                         </button>
                     </div>
-                    <ul class="experience-contents">
-                        <li><label for="start-month[0]">開始年月</label><br><input type="date" name="start_month[0]" id="start-month[0]" placeholder="2022/1" required></li>
-                        <li>~<p></p>
-                        </li>
-                        <li><label for="end-month[0]">結束年月</label><br><input type="date" name="end_month[0]" id="end-month[0]" placeholder="現在" required></li>
-                        <li><label for="total-month[0]">共計年月</label><br><input type="text" name="total_month[0]" id="total-month[0]" placeholder="0年3個月" required></li>
-                        <li><label for="job-title[0]">職稱</label><br><input type="text" name="job_title[0]" id="job-title[0]" placeholder="請填寫職稱 EX:建築設計師" required></li>
-                        <li><label for="employment[0]">就職公司</label><br><input type="text" name="employment[0]" id="employment[0]" placeholder="請填寫公司名稱 EX:某建築師事務所" required></li>
-                    </ul>
+                    <div class="experience-contents" id="experience-contents">
+                        <div class="experience-contents-area">
+                            <div class="delete-icon -disabled">
+                                <button type="button" onclick="deleteExperienceForm(this)"><img src="../img/delete_form_dark.svg"></button>
+                            </div>
+                            <ul>
+                                <li><label>開始年月</label><br><input type="date" class="experience-form start-month" name="start_month[0]" id="start-month-0" placeholder="2022/1" required></li>
+                                <li>~<p></p>
+                                </li>
+                                <li><label>結束年月</label><br><input type="date" class="experience-form end-month" name="end_month[0]" id="end-month-0" placeholder="現在" required></li>
+                                <li><label>共計年月</label><br><input type="text" class="experience-form total-month" name="total_month[0]" id="total-month-0" placeholder="0年3個月" required></li>
+                                <li><label>職稱</label><br><input type="text" class="experience-form job-title" name="job_title[0]" id="job-title-0" placeholder="請填寫職稱 EX:建築設計師" required></li>
+                                <li><label>就職公司</label><br><input type="text" class="experience-form employment" name="employment[0]" id="employment-0" placeholder="請填寫公司名稱 EX:某建築師事務所" required></li>
+                            </ul>
+                            <div class="experience-note">
+                                <textarea class="experience-form detail" id="detail[0]" placeholder="簡述, 工作重點, 負責專案, 備註"></textarea>
+                            </div>
+                        </div>
+                    </div>
 
-                    <div class="experience-note"><textarea placeholder="簡述, 工作重點, 負責專案, 備註"></textarea></div>
                 </div>
                 <div class="education">
                     <div class="education-top">
                         學歷 Education
-                        <button type="button" onclick="">
+                        <button type="button" onclick="addEducationForm()">
                             <img src="../img/add_form_dark.svg" alt="addForm_icon">
                         </button>
                     </div>
-                    <ul class="education-contents">
-                        <li><label for="begin-month[0]">開始年月</label><br><input type="date" name="begin_month[0]" id="begin-month[0]" placeholder="2020/9" class="begin-month" required></li>
-                        <li>~<p></p>
-                        </li>
-                        <li><label for="last-month[0]">結束年月</label><br><input type="date" name="last_month[0]" id="last-month[0]" required></li>
-                        <li>
-                            <input type="radio" name="graduate[0]" id="graduate[0]" required>
-                            <label for="graduate[0]" class="education-radio-button">畢業</label>
-                        </li>
-                        <li>
-                            <input type="radio" name="graduate[0]" id="n-graduate[0]" required>
-                            <label for="n-graduate[0]" class="education-radio-button">肄業</label>
-                        </li>
-                        <li><label for="school[0]">學校</label><br><input type="text" name="school[0]" id="school[0]" placeholder="台湾大学" required></li>
-                        <li><label for="subject[0]">科系</label><br><input type="text" name="subject[0]" id="subject[0]" placeholder="土木工程系" required></li>
-                        <li><label for="degree[0]">學位</label><br><input type="text" name="degree[0]" id="degree[0]" placeholder="博⼠候選⼈" required></li>
-                    </ul>
+                    <div class="education-contents" id="education-contents">
+                        <div class="education-contents-area">
+                            <div class="delete-icon -disabled">
+                                <button type="button" onclick="deleteEducationForm(this)"><img src="../img/delete_form_dark.svg"></button>
+                            </div>
+                            <ul >
+                                <li>
+                                    <label class="education_label">開始年月</label><br><input type="date" class="begin-month education-form education-txt-form" name="begin_month[0]" id="begin-month-0" placeholder="2020/9" required></li>
+                                <li>~<p></p>
+                                </li>
+                                <li><label class="education_label">結束年月</label><br><input type="date" class="last-month education-form education-txt-form" name="last_month[0]" id="last-month-0" required></li>
+                                <li>
+                                    <input type="radio" class="graduate education-form" name="graduate[0]" id="graduate-0" value="1" required>
+                                    <label class="education_label" for="graduate-0" checked>畢業</label>
+                                </li>
+                                <li>
+                                    <input type="radio" class="n-graduate education-form" name="graduate[0]" id="n-graduate-0" value="0" required>
+                                    <label class="education_label" for="n-graduate-0" >肄業</label>
+                                </li>
+                                <li><label class="education_label">學校</label><br><input type="text" class="school education-form education-txt-form" name="school[0]" id="school-0" placeholder="台湾大学" required></li>
+                                <li><label class="education_label">科系</label><br><input type="text" class="subject education-form education-txt-form" name="subject[0]" id="subject-0" placeholder="土木工程系" required></li>
+                                <li><label class="education_label">學位</label><br><input type="text" class="degree education-form education-txt-form" name="degree[0]" id="degree-0" placeholder="博⼠候選⼈" required></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="license ">
                     <div class="license-top">
@@ -132,7 +149,7 @@
                             <div class="delete-icon -disabled">
                                 <button type="button" class="license_add_btn" onclick="deleteLicenseForm(this)"><img src="../img/delete_form_dark.svg"></button>
                             </div>
-                            <input type="text" class="license-form" name="license[0]" placeholder="台灣台北註冊建築師" required>
+                            <input type="text" class="license-form" name="license[0]" id="license-0" placeholder="台灣台北註冊建築師" required>
                         </div>
                     </div>
                 </div>
