:wrench: パスワードリセットページ修正

--- a/password/email.html
+++ b/password/email.html
@@ -25,30 +25,36 @@
             </div>
         </div>
     </header>
-    <div class="confirm-body">
-        <div class="confirm-body-box">
-            <div class="confirm-body-title">
-                重置密碼
-            </div>
-            <table class="confirm-body-input">
-                <tr>
-                    <td><label for="c-mail">電子郵件信箱</label></td>
-                    <td><input type="email" name="c_mail" id="c-mail"></td>
-                </tr>
-                <tr>
-                    <td><label for="password">密碼</label></td>
-                    <td><input type="password" name="password" id="password"></td>
-                </tr>
-                <tr>
-                    <td><label for="password2">再次輸入密碼</label></td>
-                    <td><input type="password" name="password2" id="password2"></td>
-                </tr>
-            </table>
-            <div class="reset-password">
-                <button class="reset-button">重置密碼</button>
+    <div class="m-logo">
+        <img src="../img/logo_red.svg" alt="A++">
+    </div>
+    <form action="">
+        <div class="confirm-body">
+            <div class="confirm-body-box">
+                <div class="confirm-body-title">
+                    重置密碼
+                </div>
+                <table class="confirm-body-input">
+                    <tr>
+                        <td><label for="c-mail">電子郵件信箱</label></td>
+                        <td><input type="email" name="c_mail" id="c-mail"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="password">密碼</label></td>
+                        <td><input type="password" name="password" id="password"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="password2">再次輸入密碼</label></td>
+                        <td><input type="password" name="password2" id="password2"></td>
+                    </tr>
+                </table>
+                <div class="reset-password">
+                    <button class="reset-button">重置密碼</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
+
     <!-- footer -->
     <footer class="footer">
         <div class="footer__navigate">
