--- a/password/confirm.html
+++ b/password/confirm.html
@@ -25,20 +25,29 @@
             </div>
         </div>
     </header>
-    <div class="confirm-body">
-        <div class="confirm-body-box">
-            <div class="confirm-body-title">
-                重置密碼
-            </div>
-            <div class="confirm-body-input">
-                <label for="c-email">電子郵件信箱</label>
-                <input type="email" id="c-email" required>
-            </div>
-            <div class="reset-password">
-                <button class="reset-button">重置密碼</button>
+    <div class="m-logo">
+        <img src="../img/logo_red.svg" alt="A++">
+    </div>
+    <form action="">
+        <div class="confirm-body">
+            <div class="confirm-body-box">
+                <div class="confirm-body-title">
+                    重置密碼
+                </div>
+                <table class="confirm-body-input">
+                    <tr>
+                        <td><label for="c-email">電子郵件信箱</label></td>
+                        <td><input type="email" id="c-email" required></td>
+                    </tr>
+
+                </table>
+                <div class="reset-password">
+                    <button class="reset-button">重置密碼</button>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
+
     <!-- footer -->
     <footer class="footer">
         <div class="footer__navigate">
